add data display to page; needs refinement

--- a/index.html
+++ b/index.html
@@ -82,10 +82,7 @@
       </div>
     </div>
     <div class="mdl-tabs__panel" id="tab3">
-      <ul class="item-list"></ul>
-        <li class='individual-item'><p>sally tab's content.</p><hr></li>
-        <li class='individual-item'><p>jo tab's content.</p><hr></li>  
-      </ul>
+      <ul class="test"></ul>
       <div class="tab-footer">
        
       </div>
