fix bug with user url to their profile

--- a/index.html
+++ b/index.html
@@ -64,10 +64,7 @@
   </div>
   
     <div class="mdl-tabs__panel is-active" id="tab1">
-      <ul class="item-list"></ul>
-        <li class='individual-item'><p>First tab's content.</p><hr></li>
-        <li class='individual-item'><p>bob tab's content.</p><hr></li>  
-      </ul>
+      <ul class="main-list"></ul>
       <div class="tab-footer">
         
       </div>
@@ -82,7 +79,7 @@
       </div>
     </div>
     <div class="mdl-tabs__panel" id="tab3">
-      <ul class="test"></ul>
+      <ul class="test"></div>
       <div class="tab-footer">
        
       </div>
