add styling for tab elements that display api data

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
       <div class="mdl-layout-spacer"></div>
       <!-- Navigation. We hide it in small screens. -->
       <nav class="mdl-navigation mdl-layout--large-screen-only">
-        <a class="mdl-navigation__link" href="">About <i class="material-icons face-icon">face</i></a>
-        <a class="mdl-navigation__link" href="">API Info</a>
+        <a class="mdl-navigation__link" href="http://jocelynalsdorf.com/">About </a>
+        <a class="mdl-navigation__link" href="https://github.com/justintv/Twitch-API">API Info</a>
       </nav>
     </div>
   </header>
   <div class="mdl-layout__drawer">
     <span class="mdl-layout-title">Secret Menu</span>
     <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="">Door 1</a>
-      <a class="mdl-navigation__link" href="">Door 2</a>
-      <a class="mdl-navigation__link" href="">Door 3</a>
-      <a class="mdl-navigation__link" href="">Door 4</a>
+      <a class="mdl-navigation__link" href="https://en.wikipedia.org/wiki/Ryan_Adams"><i class="material-icons face-icon">face</i></a>
+      <a class="mdl-navigation__link" href="http://www.tompetty.com/"><i class="material-icons face-icon">face</i></a>
+      <a class="mdl-navigation__link" href="http://www.radiohead.com/"><i class="material-icons face-icon">face</i></a>
+      <a class="mdl-navigation__link" href="http://www.stereophonics.com/"><i class="material-icons face-icon">face</i></a>
     </nav>
   </div>
   <main class="mdl-layout__content">
